--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 django==4.2.2
 djangorestframework==3.14.0
 drf-nested-routers==0.93.4
-# djangorestframework-simplejwt==5.2.2
+djangorestframework-simplejwt==5.2.2
 
 # Python-PostgreSQL Database Adapter
 psycopg2-binary==2.9.6
