--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,16 @@
-django==4.2.2
+django==4.2.5
 djangorestframework==3.14.0
 drf-nested-routers==0.93.4
-djangorestframework-simplejwt==5.2.2
+djangorestframework-simplejwt==5.3.0
+rules==3.3.0
 
 # Python-PostgreSQL Database Adapter
 psycopg2-binary==2.9.6
 
 # ci
-pre-commit==3.3.2
-flake8==6.0.0
-pylint==2.17.4
+pre-commit==3.4.0
+flake8==6.1.0
+pylint==2.17.5
 pylint-django==2.5.3
 gitlint==0.19.1
 interrogate==1.5.0
